@@ -38,6 +38,14 @@
             <version>9.1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Source: https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>21.0.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -59,9 +67,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>MainApp</mainClass>
-                    <!-- Necesario para que FXMLLoader pueda inyectar @FXML
-                         sin module-info.java -->
                     <options>
+                        <option>--add-modules</option>
+                        <option>javafx.media</option>
+
                         <option>--add-opens</option>
                         <option>javafx.fxml/javafx.fxml=ALL-UNNAMED</option>
                     </options>
